01-operators/manifests/wave-0-gpu-operator-subscription.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nvidia-gpu-operator
  labels:
    openshift.io/cluster-monitoring: "true"
