01-operators/manifests/wave-0-nfd-subscription.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-nfd
  labels:
    openshift.io/cluster-monitoring: "true"
