01-operators/manifests/wave-1-rhoai-subscription.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redhat-ods-operator
