01-operators/manifests/wave-1-serverless-subscription.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-serverless
  labels:
    openshift.io/cluster-monitoring: "true"
